# investlab

./: .gitignore  README.md  pyproject.toml  test_acoes.py  test_brapi.py  test_debug.py  test_import.py  test_sources.py  test_yahoo.py
assets/: README.md
src/: main.py  theme.py
src/components/: __init__.py  badge.py  metric_card.py  nav_bar.py  top_bar.py
src/models/: __init__.py  ativo.py
src/services/: screener.py  storage.py
src/storage/data/: carteira.json
src/utils/: __init__.py  formatters.py
src/views/: __init__.py  acoes.py  cadastro.py  carteira.py  fiis.py  macro.py  renda_fixa.py  visao_geral.py
storage/data/: carteira.json
